pkg/tests/testthat/errors/mdl/singular1.mdl
ident z1 = y1 + x1;
ident x1 = 2 * x1 + z1 + y1 + 2;
ident y1 = 0 * y1 + z1 + y1 - 2;
ident z2 = y2 + x2;
ident x2 = 2 * x2 + z2 + y2 + 2;
ident y2 = 0 * y2 + z2 + 2 * y2 - 2;
ident p1 = 0 * p1 + 2 * y1;
